# webtool

./: .dockerignore  .gitignore  .gitigore  Dockerfile  Makefile  README.md  admins  genflaskkey  ioccc.py  ioccc_common.py  ioccc_date.py  ioccc_passwd.py  iocccpasswd.py  requirements.txt  set_slot_status.py  setup.cfg  setup.cfg.template  template.setup.cfg  uwsgi.ini
etc/: admins.json  init.iocccpasswd.json  init.state.json  pw.words  requirements.txt
iocccsubmit/: __init__.py  ioccc.py  ioccc_common.py
sbin/: genflaskkey.sh  ioccc_passwd.py
src/static/: ioccc.css
static/: ioccc.css  ioccc.js
templates/: OLD-index.html  OLD-register.html  OLD.re-confirm.html  admin.html  admin.html~  closed.html  index.html  index.html.sav  index.html~  login.html  not-open.html  passwd.html  protected_page.html  re-confirm.html  register.html  submit.html
users/joeshmo/: entries.json
wsgi/: ioccc.wsgi
