[metadata]
name = ioccc-submit-tool
version = 0.1.6
author = Landon Noll
author_email = judges@ioccc.org
url = https://github.com/ioccc-src/submit-tool
description = IOCCC submit server
long_description = file:README.md
long_description_content_type= text/markdown
license = BSD 3-Clause License

[options]
packages = find:
package_dir =
   = src
python_requires = >=3.8
install_requires =
   authlib>=1.3.2
   filelock>=3.16.1
   flask-auth>=0.85
   flask-httpauth>=4.8.0
   flask-login>=0.6.3
   pwnedpasswords>=2.0.0
   werkzeug>=3.0.3

[options.packages.find]
where = src

[options.package_data]
submittool =
   templates/*
   etc/*
   static/*

